--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ body {
 button {
     font-family: "Times New Roman", Helvetica, sans-serif;
     font-weight: bold;
-    width: 60px;
-    height: 40px;
-    font-size: 18px;
-    border-radius: 16px;
+    width: 120px;
+    height: 80px;
+    font-size: 36px;
+    border-radius: 32px;
     margin: 0;
 }
 
@@ -18,40 +18,41 @@ button {
     display: flex;
     flex-direction: column;
     background-color: gray;
-    border: solid lightgray 4px;
-    padding: 5px;
-    
+    border: solid lightgray 16px;
+    border-radius: 40px;
+    padding: 10px;
 }
 
 .display {
     background-color:cadetblue;
-    border: solid darkgray 2px;
-    margin: 5px;
-    padding: 0 4px 0;
+    border: solid darkgray 4px;
+    margin: 10px;
+    padding: 0 8px 0;
     text-align: right;
-    font-size: 30px;
+    font-size: 60px;
 }
 
 .keypad {
     display: flex;
-    width: 260px;
+    justify-content: center;
+    width: 520px;
     margin: 0;
 }
 
 .number-controls {
-    width: 190px;
-    margin-right: 2px;
+    width: 380px;
+    margin-right: 4px;
 }
 
 .top {
     display: flex;
-    gap: 6px;
-    font-size: 12px;
-    width: 200px;
+    gap: 12px;
+    font-size: 24px;
+    width: 400px;
 }
 
 .clear, .undo {
-    width: 90px;
+    width: 180px;
     background-color: rgb(37, 37, 37);
     color: white;
 }
@@ -61,7 +62,7 @@ button {
     justify-content: space-between;
 }
 
-.number {
+.number, .decimal, .change-sign {
     background-color: white;
 }
 
